--- a/package.json
+++ b/package.json
@@ -3,10 +3,17 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "start": "NODE_ENV=production node build/server.js",
+    "dev": "NODE_ENV=development nodemon src/server.ts",
+    "debug": "NODE_ENV=debug nodemon --inspect src/server.ts"
+  },
   "dependencies": {
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "helmet": "^4.5.0",
     "sucrase": "^3.18.1"
   },
   "devDependencies": {
