--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "NODE_ENV=production node build/server.js",
     "dev": "NODE_ENV=development nodemon src/server.ts",
-    "debug": "NODE_ENV=debug nodemon --inspect src/server.ts"
+    "debug": "NODE_ENV=debug nodemon --inspect src/server.ts",
+    "test": "NODE_ENV=test jest"
   },
   "dependencies": {
     "@types/cors": "^2.8.10",
