--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^4.5.0",
+    "mongoose": "^5.12.6",
     "sucrase": "^3.18.1"
   },
   "devDependencies": {
+    "@types/dotenv": "^8.2.0",
     "@types/jest": "^26.0.23",
+    "@types/mongoose": "^5.10.5",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
     "eslint": "^7.25.0",
