--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-promise": "^4.3.1",
     "jest": "^26.6.3",
     "nodemon": "^2.0.7",
+    "supertest": "^6.1.3",
     "ts-jest": "^26.5.5",
     "typescript": "^4.2.4"
   }
